Various responsiveness changes.  Fix weird top menu click issue on mobile.  Add links to featured pet area.  Change date of birth to age.

--- a/src/components/Contact.module.scss
+++ b/src/components/Contact.module.scss
@@ -16,4 +16,8 @@
 	@media (max-width: 500px) {
 		background-size: 25%;
 	}
+
+	@media (max-width: 360px) {
+		background-image: none;
+	}
 }
