--- a/src/components/Home/FeaturedPets.module.scss
+++ b/src/components/Home/FeaturedPets.module.scss
@@ -9,13 +9,17 @@
   }
 
   h2 {
-    color: $color-secondary;
     font-size: 3.3rem;
     margin-bottom: 1rem;
 
     @media (max-width: 500px) {
       font-size: 3.1rem;
     }
+  }
+
+  .animal-link {
+    color: $color-secondary;
+    text-decoration: none;
   }
 
   hr {
@@ -30,7 +34,7 @@
 
   .pet-info {
     flex: 1 0;
-    margin-left: 1.5rem;
+    margin-left: 1.5%;
 
     ul {
       list-style: none;
@@ -39,7 +43,7 @@
       li {
         display: flex;
         align-items: center;
-        padding: 0.3rem 0 0.3rem 1rem;
+        padding: 0.1rem 0 0.2rem 1rem;
         border-top: solid 1px $color-primary;
 
         &:last-child {
@@ -47,13 +51,13 @@
         }
 
         label {
-          flex: 1;
-          font-size: 2rem;
+          flex: 0 1 15rem;
+          font-size: 1.6rem;
           font-weight: 500;
         }
 
         span {
-          flex: 2;
+          flex: 1;
           font-size: 1.5rem;
           margin-left: 2rem;
         }
